<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MemoryGame</string>
    <string name="title_Memory">Memory Game</string>
    <string name="start_game">Start Game</string>
    <string name="start_new_game">Start new game</string>
    <string name="counterScore">0</string>
    <string name="counter">Moves</string>
    <string name="fin_message">Congratulations!</string>
    <string name="record_message">Congratulations new record!</string>
    <string name="startGame4x4">Start Game 4x4</string>
    <string name="startGame4x5">Start Game 4x5</string>
    <string name="startGame4x6">Start Game 4x6</string>
    <string name="changeTypeButton">Change Game Type</string>

</resources>